<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Food App</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_saved">Saved</string>
    <string name="title_recipe">Recipe</string>
    <string name="search_placeholder">Display search results here.</string>
    <string name="saved_placeholder">Display saved recipes here.</string>
    <string name="home_placeholder">Your Pantry List</string>
    <string name="recipe_placeholder">Current recipe happens here.</string>
    <string name="search_bar_placeholder">Current searchbar happens here</string>
    <string name="search_title_placeholder">Current search title happens here.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_title">Food 4 Thought</string>
    <string name="pantryEditText">Pantry Ingredient</string>
    <string name="nameEditText">John Doe</string>
    <string name="emailEditText">john.doe@email.com</string>
    <string name="locationEditText">San Jose, CA</string>
    <string name="heightEditText">206</string>
    <string name="weightEditText">180 LBS</string>
    <string name="pantryAddText">Add</string>
    <string name="item1">ITEM_ONE</string>
    <string name="item2">ITEM_TWO</string>
    <string name="profileEditBtn">Edit User Profile</string>
    <string name="dietBtn">Diet Restrictions</string>
    <string name="pantryTitleA">The Pantry</string>
    <string name="pantryTitleB">Add your current groceries here.</string>
    <string name="nameTitle">Name</string>
    <string name="emailTitle">Email</string>
    <string name="locationTitle">Location</string>
    <string name="heightTitle">Height (cm)</string>
    <string name="weightTitle">Weight (LBS)</string>
    <string name="updateProf">Update Profile</string>
    <string name="allergen">ALLERGEN_1</string>
    <string name="defaultName">John Doe</string>
    <string name="defaultEmail">john.doe@email.com</string>
    <string name="profileHeight">HGHT:</string>
    <string name="defaultHeight">206</string>
    <string name="centimeters">cm</string>
    <string name="profileWeight">WGHT:</string>
    <string name="defaultWeight">180</string>
    <string name="lbs">LBS</string>
    <string name="defaultLocation">San Jose, CA</string>
    <string name="allergy0">Milk</string>
    <string name="allergy1">Eggs</string>
    <string name="allergy2">Tree Nuts</string>
    <string name="allergy3">Peanuts</string>
    <string name="allergy4">Shellfish</string>
    <string name="allergy5">Wheat</string>
    <string name="allergy6">Soy</string>
    <string name="allergy7">Fish</string>

    <string-array name="query_suggestions">
        <item>bread</item>
        <item>celery</item>
    </string-array>

    <string name="recipe_ingredients">Recipe Ingredients Placeholder</string>
    <string name="recipe_title">Recipe Title Placeholder</string>
    <string name="recipe_description">Recipe Description Placeholder</string>
    <string name="recipe_preparation_text">Recipe Preparatoin Placeholder</string>

</resources>