<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_saved"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/title_saved" />

    <item
        android:id="@+id/navigation_recipe"
        android:icon="@drawable/ic_baseline_fastfood_24"
        android:title="@string/title_recipe" />
    git

</menu>